Fix trash icon alignment to match Terminals

--- a/src/vs/workbench/contrib/positronConsole/browser/components/consoleTabList.css
+++ b/src/vs/workbench/contrib/positronConsole/browser/components/consoleTabList.css
@@ -112,8 +112,7 @@
 .tabs-container .tab-button .delete-button .codicon {
 	height: 15px;
 	width: 15px;
-
-	vertical-align: middle;
+	vertical-align: text-bottom;
 }
 
 .tabs-container .tab-button .delete-button:hover {
